# weather_bot_k8s

./: CHANGELOG.md  README.md  pyproject.toml
.ci/: .pre-commit-config.yaml  .pylintrc
.github/workflows/: backup.yaml  deploy.yaml  destroy.yaml  pre-commit-config.yaml  pre-commit.yaml
deployment/terraform/: main.tf  providers.tf  variables.tf
deployment/terraform/templates/: app.tpl  pgsql.tpl
docker/: Dockerfile  main.py  requirements.txt
