[tool.poetry]
name = "weather_bot"
version = "0.1.0"
description = "Weather TG bot in k3s"
authors = ["Roman <mmm.romka@gmail.com>"]
readme = "README.md"
packages = [{include = "bot_cicd"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "*"
pylint = "^3.2.3"
commitizen = "^3.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = [
    "pyproject.toml:version"]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
